--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="ThreadMed — Literature synthesis tool for evidence-based medicine" />
-    <title>ThreadMed</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="./src/main.tsx"></script>
-  </body>
+<html lang="en" data-theme="dark">
+
+<head>
+  <script>
+    // Restore saved theme before first paint to prevent FOUC
+    (function () {
+      var t = localStorage.getItem('threadmed-theme');
+      if (t === 'light' || t === 'dark') document.documentElement.setAttribute('data-theme', t);
+    })();
+  </script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="ThreadMed — Literature synthesis tool for evidence-based medicine" />
+  <title>ThreadMed</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="./src/main.tsx"></script>
+</body>
+
 </html>
